# predictive_salary_model

./: Makefile  Pipfile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: rf_salary.joblib  test_rf_salary.joblib
notebooks/: 1.0-eda-initial-exploration.ipynb  2.0-eda-advanced-exploration.ipynb  3.0-model-training.ipynb  4.0-explain-linear-assumptions.ipynb  5.0-hyperparam-tuning-grid.ipynb  5.1-hyperparam-optuna.ipynb  6.0-advanced-validation.ipynb  7.0-ensemble-model.ipynb
project_pwc/: __init__.py  dataset.py  features.py  plots.py
project_pwc/api/: app.py
project_pwc/modeling/: predict.py  train.py  train_and_save_best_model.py
project_pwc/ui/: app.py
tests/: test_api.py  test_dataset.py  test_features.py  test_modeling.py
